--- a/brdplace.html
+++ b/brdplace.html
@@ -1,5 +1,8 @@
 <html>
-<body>
-<div class='sk-ww-rss-feed' data-embed-id='25394918'></div><script src='https://widgets.sociablekit.com/rss-feed/widget.js' async defer></script>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>  
+  <body>
+    <div class='sk-ww-rss-feed' data-embed-id='25394918'></div><script src='https://widgets.sociablekit.com/rss-feed/widget.js' async defer></script>
+  </body>
 </html>
