--- a/embed.htm
+++ b/embed.htm
@@ -2,9 +2,9 @@
 <body>
 <h1>Test YT Embed</h1>
 
-21 Jan 2024 | Traditional Svc | Challenges Of Work <br/>
+22 Sep 2024 | Prayer & Praise Svc | Faithful And Unfaithful<br/>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fFxxiYixqjg?si=Sdz84JwsGjovdEjQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/i6ob2RS8FMs?si=EWyu1RfzZi4xzIdO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <hr />
 07 Jan 2024 | Traditional Svc | Purpose of Work <br/>
