--- a/embed.htm
+++ b/embed.htm
@@ -2,14 +2,14 @@
 <body>
 <h1>Test YT Embed</h1>
 
-22 Sep 2024 | Prayer & Praise Svc | Faithful And Unfaithful<br/>
+01 Dec 2024 | Prayer & Praise Svc | Show Me Your Ways, Lord!<br/>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/i6ob2RS8FMs?si=EWyu1RfzZi4xzIdO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/8_TI-YFnRsA?si=EWyu1RfzZi4xzIdO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <hr />
-07 Jan 2024 | Traditional Svc | Purpose of Work <br/>
+10 Nov 2024 | Traditional Svc | TRAC Conference Sunday<br/>
 <div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/pyqxrtHcYnk?si=MkF7BdSEFC6XPq9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Gi05GMox-fw?si=MkF7BdSEFC6XPq9E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 </body>
 </html>
